--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="d-flex flex-column">
             <div class="p-5 bg-dark text-white">
               <div class="d-flex flex-row justify-content-between align-items-center">
-                <h1 class="Display-4 "> Manshi Chauhan</h1>
+                <h1 class="Display-4 "> Sakshi Sethi</h1>
                 <div class=" d-md-block">
                   <a href="http://instagram.com" class="text-white">
 
@@ -56,7 +56,7 @@
             </div>
 
             <div class="p-4 bg-black">
-              Sales Manager at <strong>White Hack Junior</strong>
+              <strong>Sales Manager at White Hack Junior</strong>
 
             </div>
 
@@ -70,7 +70,7 @@
                   <img src="images/mortarboard.png" alt="">
                   <span class="d-none d-sm-block">Resume</span>
                 </div>
-                <div class="port-item p-4 bg-warning" id="image-set" data-toggle="collapse" data-target="#work">
+                <div class="port-item p-4 bg-info" id="image-set" data-toggle="collapse" data-target="#work">
                   <img src="images/folder.png" alt="">
                   <span class="d-none d-sm-block">Achievements and Certificates</span>
                 </div>
@@ -95,13 +95,11 @@
 
       <div class="card card-body bg-primary text-white py-5">
         <h2>Welcome to My Page</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="lead"> To learn and implement the best business practices and to work in innovative and creative field which gives responsibilities and recognition. </p>
       </div>
       <div class="card card-body py-5">
         <h3>My Skills</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>There are skills needed for jobs that are not only desirable by employers but necessary in order to grow in your role or work well with others. Skills can fall into various categories and can transfer from one job to another. Some common job skills include the following:</p>
         <hr>
         <h4>Interpersonal Ability</h4>
         <div class="progress mb-3">
@@ -142,8 +140,7 @@
     <div id="resume" class="collapse">
       <div class="card card-body bg-success text-white py-5">
         <h2>My Resume</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="lead"> Experienced Sales Manager having total 3 years in Brank and Tourism Sector</p>
 
       </div>
       <div class="card card-body py-5">
@@ -153,15 +150,19 @@
         <div class="card-deck">
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title text-center"> HDFC Bank</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h4 class="card-title text-center"> G.A FUTURE EDUCORE PVT. LTD</h4>
+              <p class="card-text">Taking parents orientations for new admissions.
+• Demo classes to schools and colleges for abacus and Vedic
+Math’s courses by AVAS.
+• Training to new joiners in academy for teaching sessions.
+• Visiting faculty for abacus and Vedic Math’s classes for
+different schools in location of Faridabad, Palwal, Ujina
               </p>
-              <p class="p-2 mb-3 bg-dark text-white text-center">Position:Assistant Sales Manager</p>
-              <p class="p-2 mb-3 bg-dark text-white text-center">Phone Number:9862725825</p>
+              <p class="p-2 mb-3 bg-dark text-white text-center">Position:TUTOR AND TRAINER</p>
+              <p class="p-2 mb-3 bg-dark text-white text-center">Phone Number:98XXXXXXXX</p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted text-center">Dates : 2016 to 2018</h6>
+              <h6 class="text-muted text-center">Dates: October 2018 to March 2020</h6>
 
             </div>
 
@@ -169,30 +170,35 @@
 
           <div class="card">
             <div class="card-body">
-              <h4 class="card-title text-center"> HDFC Bank</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h4 class="card-title text-center"> AU SMALL FINANCE BANK</h4>
+              <p class="card-text">Identifying the new leads and pitching to the clients.
+• Providing client services to the existing customers.
+• Managing CRM software.
+• Managing customer relations
               </p>
-              <p class="p-2 mb-3 bg-dark text-white text-center">Position: Sales Associate</p>
-              <p class="p-2 mb-3 bg-dark text-white text-center">Phone Number:9862725825</p>
+              <p class="p-2 mb-3 bg-dark text-white text-center">Position:SALES OFFICER</p>
+              <p class="p-2 mb-3 bg-dark text-white text-center">Phone Number:98XXXXXXXX</p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted text-center">Dates : 2015 to 2016</h6>
+              <h6 class="text-muted text-center">Dates:March 2017 to November 2017</h6>
 
             </div>
 
           </div>
           <div class="card">
             <div class="card-body ">
-              <h4 class="card-title text-center"> Axis Bank</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h4 class="card-title text-center"> CHAND TOURS PVT. LTD</h4>
+              <p class="card-text"> worked on TRAMS back office.
+• Worked on Global Distribution System (GDS) - Worldspan
+and Sabre
+• Checking the commissionable fares offered by Airlines to
+the company..
               </p>
-              <p class="p-2 mb-3 bg-dark text-white text-center">Marketing Intern</p>
-              <p class="p-2 mb-3 bg-dark text-white text-center">Phone Number:986784225</p>
+              <p class="p-2 mb-3 bg-dark text-white text-center">Position:SALES OFFICER</p>
+              <p class="p-2 mb-3 bg-dark text-white text-center">Phone Number:98XXXXXXXX</p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted text-center">Dates : 2013 to 2015</h6>
+              <h6 class="text-muted text-center">Dates:September 2014 – October 2016</h6>
 
             </div>
 
@@ -205,17 +211,15 @@
 
     <!-- Work -->
     <div id="work" class="collapse">
-      <div class="card card-body bg-warning text-white py-5">
+      <div class="card card-body bg-info text-white py-5">
         <h2>My Achievement and Certificate</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="lead">Here is my collection of Achievements and Certificate</p>
 
       </div>
       <div class="card card-body py-5">
-        <h3>Here is what you were looking for ?</h>
+        <h3>
         </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p></p>
         <div class="row no-gutters">
           <div class="col-md-3">
             <a href="https://image.freepik.com/free-vector/elegant-certificate-template_23-2148402681.jpg" ddata-toggle="Lightbox">
@@ -248,13 +252,11 @@
     <div id="contact" class="collapse">
       <div class="card card-body bg-danger text-white  py-5">
         <h2>Contact</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="lead"> </p>
       </div>
       <div class="card card-body py-5">
         <h3>Get in Touch</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Looking forward for further interaction/p>
 
 
         <form>
